--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,17 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "path",
+            "url": "https://github.com/PatangeDivya/filament-user-crud-plugin"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
-        "spatie/laravel-package-tools": "^1.15.0"
+        "spatie/laravel-package-tools": "^1.15.0",
+        "patangedivya/filament-user-crud-plugin": "*"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
