--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,11 @@
         "spatie/laravel-package-tools": "^1.15.0"
     },
     "require-dev": {
+        "laravel/framework": "10.*",
         "laravel/pint": "^1.0",
+        "nesbot/carbon": "2.*",
         "nunomaduro/collision": "^7.9",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "8.*",
         "pestphp/pest": "^2.1",
         "pestphp/pest-plugin-arch": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0"
